# varchive

./: README.md  meson.build
data/: meson.build  org.vaxp.archive.gresource.xml
data/css/: style.css
debian/: changelog  control  copyright  debhelper-build-stamp  files  varchive.substvars
debian/.debhelper/varchive/: dbgsym-build-ids
debian/.debhelper/varchive/dbgsym-root/DEBIAN/: control  md5sums
debian/.debhelper/varchive/dbgsym-root/usr/share/doc/: varchive-dbgsym
debian/varchive/DEBIAN/: control  md5sums
debian/varchive/usr/share/applications/: org.vaxp.archive.desktop
debian/varchive/usr/share/varchive/: varchive-resources.gresource
src/: main.c  meson.build
src/backend/: var-backend.c  var-backend.h  var-command-backend.c  var-command-backend.h  var-entry.c  var-entry.h  var-format-registry.c  var-format-registry.h  var-libarchive-backend.c  var-libarchive-backend.h
src/core/: var-application.c  var-application.h  var-types.h  var-utils.c  var-utils.h
src/presentation/dialogs/: var-create-dialog.c  var-create-dialog.h  var-extract-dialog.c  var-extract-dialog.h  var-password-dialog.c  var-password-dialog.h  var-preferences-dialog.c  var-preferences-dialog.h  var-properties-dialog.c  var-properties-dialog.h
src/presentation/widgets/: var-archive-view.c  var-archive-view.h  var-headerbar.c  var-headerbar.h  var-location-bar.c  var-location-bar.h  var-progress-overlay.c  var-progress-overlay.h  var-toolbar.c  var-toolbar.h
src/presentation/windows/: var-main-window.c  var-main-window.h
src/services/: var-archive-service.c  var-archive-service.h
